vbnc/vbnc/vbnc/tests/Errors/30311-35.vb
Imports System
Class T
    Const M_Boolean As Boolean = #1/1/2008#
End Class